k8s/platform/n8n/overlays/dev/http-n8n.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-n8n
  namespace: platform
spec:
  hostnames:
    - n8n.apps.192-168-58-2.sslip.io
  parentRefs:
    - name: homelab-gw
      namespace: networking
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: ak-outpost-shared-outpost
          namespace: auth
          port: 9000
